@@ -15,7 +15,6 @@ lib/Photonic/CharacteristicFunctions.pm
 lib/Photonic/Geometry/FromB.pm
 lib/Photonic/Geometry/FromEpsilon.pm
 lib/Photonic/Geometry/FromImage2D.pm
-lib/Photonic/Iterator.pm
 lib/Photonic/LE/NP/EpsL.pm
 lib/Photonic/LE/NP/EpsTensor.pm
 lib/Photonic/LE/NP/Haydock.pm
