@@ -1,5 +1,6 @@
 - separate storeAllFN from stateFN
 - Haydock states stored in memory-mapped files rather than using Storable
+- remove the state_iterator capability which is replaced by memory-mapping, allowing large threaded calculations
 
 0.021 2021-10-01
 - Add example of honeycomb lattice for LE::NR2
